WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281584
Unreviewed VisionOS build fix
285485@main
https://bugs.webkit.org/show_bug.cgi?id=281584
Summary
Unreviewed VisionOS build fix 285485@main
Chris Dumez
Reported
2024-10-16 09:27:15 PDT
VisionOS build fix
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-16 09:27:26 PDT
<
rdar://problem/138042262
>
Chris Dumez
Comment 2
2024-10-16 09:28:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35284
EWS
Comment 3
2024-10-16 09:31:40 PDT
Committed
285270@main
(b362f96a391d): <
https://commits.webkit.org/285270@main
> Reviewed commits have been landed. Closing PR #35284 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug