Unreviewed VisionOS build fix 285485@main https://bugs.webkit.org/show_bug.cgi?id=281584 rdar://138042262

* Source/WebCore/Modules/model-element/dummy/DummyModelPlayer.cpp:
(WebCore::DummyModelPlayer::DummyModelPlayer):
(WebCore::m_id):
(WebCore::DummyModelPlayer::identifier const): Deleted.
* Source/WebCore/Modules/model-element/dummy/DummyModelPlayer.h:

Canonical link: https://commits.webkit.org/285270@main